[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Platform.gd" type="Script" id=1]
[ext_resource path="res://sprites/sprMovingPlatform_0.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16, 1 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 17, 9 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 1 )

[node name="Platform" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[node name="PlatformHitbox" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformHitbox"]
position = Vector2( 0, -7 )
shape = SubResource( 11 )
one_way_collision = true

[node name="WallsHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallsHitbox"]
shape = SubResource( 10 )

[node name="PlayerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2( 0, -9 )
shape = SubResource( 12 )

[connection signal="body_entered" from="WallsHitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_PlayerHitbox_body_entered"]
[connection signal="body_exited" from="PlayerHitbox" to="." method="_on_PlayerHitbox_body_exited"]
